test_suite/tests/compile-fail/private_flags.stderr
error[E0603]: struct `Flags2` is private
  --> $DIR/private_flags.rs:19:26
   |
19 |     let flag2 = example::Flags2::FLAG_B;
   |                          ^^^^^^ private struct
   |
note: the struct `Flags2` is defined here
  --> $DIR/private_flags.rs:10:5
   |
10 | /     bitflags! {
11 | |         struct Flags2: u32 {
12 | |             const FLAG_B = 0b00000010;
13 | |         }
14 | |     }
   | |_____^
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
